infrastructure/hosting_contexts/prod/etc/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Sun Jul  2 16:07:49 2023
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 85.13.153.208/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 217.65.125.69/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sun Jul  2 16:07:49 2023
